fix picture layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,12 +161,14 @@ main {
     width: 170px;
     margin: 1px;
     border-radius: 10%;
+    object-fit: cover;
 }  
 #qualified-logo2 > img {
     height: 60px;
     width: 100px;
     margin-top: 1px;
     border-radius: 10%;
+    object-fit: cover;
 }
 #social-networks {
     background-color: rgb(208, 197, 174);
